Simplified unit tests and dependencies